# guiollama

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml
adapters/: __init__.py  chat_repository.py  db.py  ollama_client.py  orm.py
app/: __init__.py  container.py
docs/: architecture.md
domain/: __init__.py  entities.py  exceptions.py  ports.py
infra/: __init__.py  config.py  logging.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
services/: __init__.py  chat_services.py
ui/: __init__.py
utils/: __init__.py
