[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guiollama"
version = "0.1.0"
description = "A feature-rich Chainlit frontend client for Ollama."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Emanuel Lázaro" }
]
dependencies = [
    "chainlit>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
